# vta

./: .gitignore  .pre-commit-config.yaml  Function.bat  HelloWorld.bat  PowerCycle.bat  README.md  README.zh-cn.md  REFACTORING_SUMMARY.md  Stability.bat  TODO.md  ensure_license_header.py  format_code.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py
.github/workflows/: basic-checks.yaml
docs/: API_REFACTORING_GUIDE.md  README.md  README_ADB.md  diagnostic_client.md
docs/source/: conf.py  index.rst
examples/: README.md  README.py  adb_client_examples.py  agent_client_examples.py  api.robot  api_demo.py  async.robot  canoe_client_examples.py  click_hello.py  device_client_examples.py  diagnostic_example.py  hardware_client_examples.py  image.robot  network_client_examples.py  variables.robot
scripts/: WebCamController.py  autodownloader.py  autotrigger.py  dbscrapy.py  he.py  migrate.py  rtcasync.py  rtcsync.py  scheduler.py
scripts/Runners/: CombineOutputs.bat  HelloWorld.bat  HelloWorld.py
scripts/SimpleSwup/: simpleswup.py
scripts/pyarmor_runtime_000000/: __init__.py  pyarmor_runtime.pyd
scripts/simpleswup/: ArtiHelper.py  simpleswup.py  template.yaml  toolkits.py
tests/: conftest.py  tb.py  test.py  test.robot  test_ota.py
vat/: main.py
vat/api/: AgentHelper.py  AgentHepler.py  ArtifaHelper.py  CANoeHelper.py  DLTHelper.py  PuttyHelper.py  RelayHelper.py
vat/conf/: base.py  bench_setup.py  powercycle.py  powercycle_setup.py  template_bench_setup.py  template_powercycle_setup.py  template_settings.py
vat/core/: RobotVisitor.py  (+2 more)
(+169 files in other folders)
